Fix alignment of header elements by putting in a container

--- a/css/style.css
+++ b/css/style.css
@@ -6563,10 +6563,7 @@ table .checkbox input[type="checkbox"] {
   margin-top: 0;
   max-width: 100%;
 }
-.navbar.container > .container {
-  width: 100%;
-}
-.navbar.container > .container .navbar-brand {
+.navbar.container .navbar-brand {
   margin-left: 0;
 }
 .navbar-default {
@@ -6670,6 +6667,7 @@ table .checkbox input[type="checkbox"] {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  float: none;
   padding-bottom: 30px;
 }
 .navbar-default .navbar-header:before,
