--- a/less/header.less
+++ b/less/header.less
@@ -2,12 +2,8 @@
   margin-top: 0;
   max-width: 100%;
   
-  > .container {
-    width: 100%;
-
-    .navbar-brand {
-      margin-left: 0;
-    }
+  .navbar-brand {
+    margin-left: 0;
   }
 }
 
@@ -88,6 +84,7 @@
   .navbar-header {
     .container;
 
+    float: none;
     padding-bottom: @grid-gutter-width;
 
     .logo {
